proxy back to nexus

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -23,8 +23,16 @@ http {
     access_log /data/nginx/log/host.access.log;
 
     location / {
+      proxy_pass http://172.28.128.1:8081;
+    }
+
+    location /h/ {
       root /data/nginx/html;
-      index index.html index.htm;
+      index index.html;
+    }
+
+    location /v2 {
+      proxy_pass http://172.28.128.1:5000;
     }
   }
 }
