--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -20,19 +20,29 @@ http {
     listen 8888;
     server_name localhost;
 
+    client_max_body_size 5G;
+
     access_log /data/nginx/log/host.access.log;
 
     location / {
-      proxy_pass http://172.28.128.1:8081;
+      proxy_pass http://172.28.128.1:8081/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /h/ {
-      root /data/nginx/html;
-      index index.html;
+    location /v1 {
+      proxy_pass http://172.28.128.1:5000/v1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /v2 {
-      proxy_pass http://172.28.128.1:5000;
+      proxy_pass http://172.28.128.1:5000/v2;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
   }
 }
